--- a/evaluations.ipynb
+++ b/evaluations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +17,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-09-10 16:37:58,375] [INFO] [real_accelerator.py:191:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n"
+      "[2024-09-11 09:00:08,607] [INFO] [real_accelerator.py:191:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n"
      ]
     }
    ],
@@ -29,12 +29,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "import sys\n",
+    "import os\n",
+    "from tqdm import tqdm\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "sys.path.append(\".\")\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig\n",
+    "from peft import PeftModel\n",
+    "from datasets import load_dataset\n",
+    "from accelerate import Accelerator\n",
+    "from torch.utils.data import DataLoader\n",
+    "from utils.template import TEMPLATE_DICT\n",
+    "\n",
+    "#configs\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
+    "template = TEMPLATE_DICT['alpaca'][0]\n",
+    "MODEL_NAME = 'TinyLlama/TinyLlama_v1.1'\n",
+    "DATASET_NAME = 'dominguesm/alpaca-data-pt-br'\n",
+    "PATH = 'output/alpaca-data-pt-br_30000_fedavg_c60s2_i10_b16a1_l512_r8a16_20240910094609'\n",
+    "DEVICE = 'cuda'\n",
+    "NUM_CHECKPOINTS = 20\n",
+    "EVALSET_LEN = 50"
    ]
   },
   {
