--- a/eval.ipynb
+++ b/eval.ipynb
@@ -292,7 +292,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "federated_type = 'clustered'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -319,10 +328,12 @@
        "      <th>English</th>\n",
        "      <th>German</th>\n",
        "      <th>Portuguese</th>\n",
+       "      <th>Spanish</th>\n",
        "      <th>Swedish</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>cluster_language</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -335,6 +346,7 @@
        "      <td>5.194729</td>\n",
        "      <td>6.580256</td>\n",
        "      <td>5.758704</td>\n",
+       "      <td>5.874407</td>\n",
        "      <td>5.972532</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -342,6 +354,7 @@
        "      <td>5.986902</td>\n",
        "      <td>6.098965</td>\n",
        "      <td>6.998753</td>\n",
+       "      <td>6.429470</td>\n",
        "      <td>6.513763</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -349,6 +362,7 @@
        "      <td>5.333992</td>\n",
        "      <td>6.537346</td>\n",
        "      <td>5.194914</td>\n",
+       "      <td>5.664290</td>\n",
        "      <td>5.822595</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -356,6 +370,7 @@
        "      <td>5.476369</td>\n",
        "      <td>6.491864</td>\n",
        "      <td>5.695516</td>\n",
+       "      <td>5.098522</td>\n",
        "      <td>5.811633</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -363,6 +378,7 @@
        "      <td>5.461677</td>\n",
        "      <td>6.622701</td>\n",
        "      <td>5.725368</td>\n",
+       "      <td>5.934930</td>\n",
        "      <td>5.385089</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -370,26 +386,24 @@
        "</div>"
       ],
       "text/plain": [
-       "test_language      English    German  Portuguese   Swedish\n",
-       "cluster_language                                          \n",
-       "English           5.194729  6.580256    5.758704  5.972532\n",
-       "German            5.986902  6.098965    6.998753  6.513763\n",
-       "Portuguese        5.333992  6.537346    5.194914  5.822595\n",
-       "Spanish           5.476369  6.491864    5.695516  5.811633\n",
-       "Swedish           5.461677  6.622701    5.725368  5.385089"
+       "test_language      English    German  Portuguese   Spanish   Swedish\n",
+       "cluster_language                                                    \n",
+       "English           5.194729  6.580256    5.758704  5.874407  5.972532\n",
+       "German            5.986902  6.098965    6.998753  6.429470  6.513763\n",
+       "Portuguese        5.333992  6.537346    5.194914  5.664290  5.822595\n",
+       "Spanish           5.476369  6.491864    5.695516  5.098522  5.811633\n",
+       "Swedish           5.461677  6.622701    5.725368  5.934930  5.385089"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_results = pd.read_csv('results/perplexity.csv')\n",
+    "df_results = pd.read_csv(f'results/perplexity_{federated_type}.csv')\n",
     "\n",
     "df_results['cluster_language'] = df_results['model'].apply(lambda x: get_cluster_language(x))\n",
-    "\n",
-    "df_results['language'] = df_results['language'].replace({'E': 'English', 'S': 'Swedish', 'G': 'German', 'P': 'Portuguese', 'SP': 'Spanish'})\n",
     "\n",
     "df_results = df_results.rename(columns={'language': 'test_language'})\n",
     "\n",
@@ -397,7 +411,7 @@
     "\n",
     "df_results = df_results.pivot(index='cluster_language', columns='test_language', values='ppl')\n",
     "\n",
-    "df_results.to_csv('results/results_clustered.csv')\n",
+    "df_results.to_csv(f'results/results_{federated_type}_200.csv')\n",
     "\n",
     "df_results"
    ]
