results federated partial

--- a/eval.ipynb
+++ b/eval.ipynb
@@ -242,7 +242,7 @@
     "#        round = path.split('-')[-1]\n",
     "#        print(f'Perplexity {model_eval}: {perplexity}')\n",
     "#\n",
-    "#        results.append({'model': model_eval, 'round': round, 'language': language[0], 'ppl': perplexity})\n",
+    "#        results.append({'model': model_eval, 'round': round, 'language': language, 'ppl': perplexity})\n",
     "#\n",
     "#    df = pd.DataFrame(results)\n",
     "#    df.to_csv('results/perplexity_fedavg.csv', index=False)"
@@ -259,49 +259,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_cluster_language(model): #this code is valid for a specific experiment\n",
+    "def get_cluster_language(model, federated_type): #this code is valid for a specific experiment\n",
     "\n",
-    "    try:\n",
-    "        if model.split('_')[1] == '0':\n",
-    "            cluster_language = 'Swedish'\n",
+    "    if federated_type == 'fedavg':\n",
+    "        cluster_language = 'All'\n",
     "\n",
-    "        elif model.split('_')[1] == '1':\n",
-    "            cluster_language = 'English'\n",
+    "    if federated_type == 'clustered':\n",
+    "        try:\n",
+    "            if model.split('_')[1] == '0':\n",
+    "                cluster_language = 'Swedish'\n",
     "\n",
-    "        elif model.split('_')[1] == '2':\n",
-    "            cluster_language = 'German'\n",
+    "            elif model.split('_')[1] == '1':\n",
+    "                cluster_language = 'English'\n",
     "\n",
-    "        elif model.split('_')[1] == '3':\n",
-    "            cluster_language = 'Portuguese'\n",
+    "            elif model.split('_')[1] == '2':\n",
+    "                cluster_language = 'German'\n",
     "\n",
-    "        elif model.split('_')[1] == '4':\n",
-    "            cluster_language = 'Spanish'\n",
+    "            elif model.split('_')[1] == '3':\n",
+    "                cluster_language = 'Portuguese'\n",
     "\n",
-    "        else:\n",
+    "            elif model.split('_')[1] == '4':\n",
+    "                cluster_language = 'Spanish'\n",
+    "\n",
+    "            else:\n",
+    "                cluster_language = '-'\n",
+    "        \n",
+    "        except IndexError:\n",
     "            cluster_language = '-'\n",
-    "    \n",
-    "    except IndexError:\n",
-    "        cluster_language = '-'\n",
     "\n",
     "    return cluster_language"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "federated_type = 'clustered'"
+    "federated_type = 'clustered'\n",
+    "#federated_type = 'fedavg'\n",
+    "\n",
+    "round = 100\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -343,43 +350,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>English</th>\n",
-       "      <td>5.194729</td>\n",
-       "      <td>6.580256</td>\n",
-       "      <td>5.758704</td>\n",
-       "      <td>5.874407</td>\n",
-       "      <td>5.972532</td>\n",
+       "      <td>5.234012</td>\n",
+       "      <td>6.542711</td>\n",
+       "      <td>5.732719</td>\n",
+       "      <td>5.824597</td>\n",
+       "      <td>5.909504</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>German</th>\n",
-       "      <td>5.986902</td>\n",
-       "      <td>6.098965</td>\n",
-       "      <td>6.998753</td>\n",
-       "      <td>6.429470</td>\n",
-       "      <td>6.513763</td>\n",
+       "      <td>5.697710</td>\n",
+       "      <td>5.966319</td>\n",
+       "      <td>6.321868</td>\n",
+       "      <td>5.922893</td>\n",
+       "      <td>6.086348</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Portuguese</th>\n",
-       "      <td>5.333992</td>\n",
-       "      <td>6.537346</td>\n",
-       "      <td>5.194914</td>\n",
-       "      <td>5.664290</td>\n",
-       "      <td>5.822595</td>\n",
+       "      <td>5.344369</td>\n",
+       "      <td>6.531655</td>\n",
+       "      <td>5.313980</td>\n",
+       "      <td>5.655296</td>\n",
+       "      <td>5.768919</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Spanish</th>\n",
-       "      <td>5.476369</td>\n",
-       "      <td>6.491864</td>\n",
-       "      <td>5.695516</td>\n",
-       "      <td>5.098522</td>\n",
-       "      <td>5.811633</td>\n",
+       "      <td>5.471552</td>\n",
+       "      <td>6.462371</td>\n",
+       "      <td>5.696464</td>\n",
+       "      <td>5.175416</td>\n",
+       "      <td>5.799105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Swedish</th>\n",
-       "      <td>5.461677</td>\n",
-       "      <td>6.622701</td>\n",
-       "      <td>5.725368</td>\n",
-       "      <td>5.934930</td>\n",
-       "      <td>5.385089</td>\n",
+       "      <td>5.436797</td>\n",
+       "      <td>6.610296</td>\n",
+       "      <td>5.695829</td>\n",
+       "      <td>5.955241</td>\n",
+       "      <td>5.425076</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -388,14 +395,14 @@
       "text/plain": [
        "test_language      English    German  Portuguese   Spanish   Swedish\n",
        "cluster_language                                                    \n",
-       "English           5.194729  6.580256    5.758704  5.874407  5.972532\n",
-       "German            5.986902  6.098965    6.998753  6.429470  6.513763\n",
-       "Portuguese        5.333992  6.537346    5.194914  5.664290  5.822595\n",
-       "Spanish           5.476369  6.491864    5.695516  5.098522  5.811633\n",
-       "Swedish           5.461677  6.622701    5.725368  5.934930  5.385089"
+       "English           5.234012  6.542711    5.732719  5.824597  5.909504\n",
+       "German            5.697710  5.966319    6.321868  5.922893  6.086348\n",
+       "Portuguese        5.344369  6.531655    5.313980  5.655296  5.768919\n",
+       "Spanish           5.471552  6.462371    5.696464  5.175416  5.799105\n",
+       "Swedish           5.436797  6.610296    5.695829  5.955241  5.425076"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,15 +410,15 @@
    "source": [
     "df_results = pd.read_csv(f'results/perplexity_{federated_type}.csv')\n",
     "\n",
-    "df_results['cluster_language'] = df_results['model'].apply(lambda x: get_cluster_language(x))\n",
+    "df_results['cluster_language'] = df_results['model'].apply(lambda x: get_cluster_language(x, federated_type=federated_type))\n",
     "\n",
     "df_results = df_results.rename(columns={'language': 'test_language'})\n",
     "\n",
-    "df_results = df_results[df_results['round'] == 200]\n",
+    "df_results = df_results[df_results['round'] == round]\n",
     "\n",
     "df_results = df_results.pivot(index='cluster_language', columns='test_language', values='ppl')\n",
     "\n",
-    "df_results.to_csv(f'results/results_{federated_type}_200.csv')\n",
+    "df_results.to_csv(f'results/results_{federated_type}_{round}.csv')\n",
     "\n",
     "df_results"
    ]
