--- a/eval.ipynb
+++ b/eval.ipynb
@@ -12,13 +12,6 @@
       "/home/gabriel.talasso/FT_LLM_FL/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2025-03-05 15:09:29,444] [INFO] [real_accelerator.py:191:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n"
-     ]
     }
    ],
    "source": [
@@ -44,11 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "template = TEMPLATE_DICT['alpaca'][0]\n",
-    "MODEL_NAME = 'TinyLlama/TinyLlama_v1.1'\n",
-    "DATASET_NAME = \"CohereForAI/aya_dataset\"\n",
-    "DEVICE = 'cuda:0'\n",
-    "EVALSET_LEN = 10"
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '0'"
    ]
   },
   {
@@ -57,12 +46,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'output/aya_dataset_400000_clustered_c20s2_i10_b16a1_l512_r8a16_20240923122624/cluster_0_checkpoint-200'"
+    "template = TEMPLATE_DICT['alpaca'][0]\n",
+    "MODEL_NAME = 'unsloth/Llama-3.2-1B'\n",
+    "DATASET_NAME = \"CohereForAI/aya_dataset\"\n",
+    "DEVICE = 'cuda:0'\n",
+    "EVALSET_LEN = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = 'output_aya/Llama-3.2-1B/clustered_aya_dataset_clustered_c20s5_i10_b16a1_l1024_r8a16_20250401163027/cluster_0_checkpoint-200'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +89,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_instruction(instruction, response, eos):\n",
+    "    template = \"\"\"Below is an instruction that describes a task. Write a response that appropriately completes the request.\n",
+    "\n",
+    "### Instruction:\n",
+    "{} \n",
+    "\n",
+    "### Response: {}{}\"\"\"\n",
+    "\n",
+    "    return template.format(instruction, response, eos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model, tokenizer = load_model(path, MODEL_NAME, DEVICE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = '''\n",
+    "Some of our favorite collective nouns for animals include a congregation of alligators, a business of ferrets, an ostentation of peacocks, and a gaggle of what other fowl?\n",
+    "'''\n",
+    "\n",
+    "input = format_instruction(text, '', tokenizer.eos_token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Below is an instruction that describes a task. Write a response that appropriately completes the request.\n",
+      "\n",
+      "### Instruction:\n",
+      "\n",
+      "Some of our favorite collective nouns for animals include a congregation of alligators, a business of ferrets, an ostentation of peacocks, and a gaggle of what other fowl?\n",
+      " \n",
+      "\n",
+      "### Response: #A gaggle of hens.\n"
+     ]
+    }
+   ],
+   "source": [
+    "ids = tokenizer(input, return_tensors=\"pt\").input_ids.to(DEVICE)\n",
+    "response = model.generate(ids,max_length=512, do_sample=True, top_k=50, top_p=0.95, temperature=0.3, num_return_sequences=1)\n",
+    "\n",
+    "print(tokenizer.decode(response[0], skip_special_tokens=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
